# slam_engine

./: .gitignore  CmakeLists.txt  OpenGL-Renderer.sln  OpenGL-Renderer.vcxproj  OpenGL-Renderer.vcxproj.filters  README.md  generate_vs2022.bat  glad.c
assets/shaders/: depth_fragment.glsl  fragment.glsl  lit_fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  textured_fragment.glsl  to_depth_vertex.glsl  unlit_fragment.glsl  vertex.glsl  vertex_screenspace.glsl
assets/shaders/post_processing/: blur.glsl  gamma_correction.glsl  gamma_msaa.glsl  greyscale.glsl  inversion.glsl  sharpen.glsl
engine/: CMakeLists.txt
engine/include/: framebuffer.h  material.h  mesh.h  renderer.h  texture.h
engine/source/: CMakeLists.txt  camera.cpp  camera.h  light.cpp  light.h  main.cpp  material.h  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  shader.h  texture.cpp  texture.h
engine/source/slam_ecs/: CMakeLists.txt  component.h  component_pool.h  scene.cpp  scene.h  scene_view.cpp  scene_view.h
engine/source/slam_ecs/components/: transform_component.h
engine/source/slam_input/: CMakeLists.txt  input_enums.h  input_manager.cpp  input_manager.h
engine/source/slam_input.glfw/: CMakeLists.txt  input_manager_glfw.cpp  input_manager_glfw.h
engine/source/slam_main/: CMakeLists.txt  entry.cpp  entry.h  main.cpp  main.h
engine/source/slam_main.windows/: CMakeLists.txt  debug.cpp  entry.cpp  entry.h  windows_headers.h
engine/source/slam_main/debug/: debug.cpp  debug.h
engine/source/slam_main/game/: game.cpp  game.h
engine/source/slam_renderer/: CMakeLists.txt  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
engine/source/slam_utils/: CMakeLists.txt
engine/source/slam_window/: CMakeLists.txt  window.h
engine/source/slam_window.glfw/: CMakeLists.txt  window.cpp  window.h  window_glfw.cpp  window_glfw.h
game_sample/source/: CMakeLists.txt  empty.cpp  game_sample.cpp  game_sample.h
src/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  singleton.h  texture.cpp  texture.h
